<resources>
    <string name="app_name">Clubes</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="label_login">FIAP Login</string>
    <string name="label_usuario">Usuário</string>
    <string name="hint_login">Digite o seu Login</string>
    <string name="label_senha">Senha</string>
    <string name="hint_senha">Digite sua senha</string>
    <string name="label_entrar">Entrar</string>
    <string name="label_novocadastro">Novo Cadastro</string>
    <string name="title_activity_main">Inicio</string>
    <string name="label_titulo_menu_principal">Demo Layout - Clubes</string>
    <string name="btCadastrar">CADASTRAR</string>
    <string name="btVerGaleria">VER GALERIA</string>
    <string name="btVerLista">VER LISTA</string>
    <string name="btSair">SAIR</string>
    <string name="title_activity_galeria_times">Galeria de Times</string>
    <string name="title_activity_detalhe_image">Detalhe da Image</string>
    <string name="label_detalhe_imagem">Detalhe da Imagem</string>
    <string name="label_layout">Demo Layout</string>
    <string name="title_activity_cadastrar_clube">Cadastrar Clube</string>
    <string name="label_cadastrar_clune">Cadastrar Clube</string>
    <string name="btnSalvar">Salvar</string>
    <string name="btnLimpar">Limpar</string>
    <string name="label_nome">Nome</string>
    <string name="hint_clube_nome">Nome do Clube</string>
    <string name="tvAno">Ano</string>
    <string name="hint_digite_ano">Digite o ano</string>
    <string name="hint_mascote">Digite o mascote</string>
    <string name="label_mascote">Mascote</string>
    <string name="title_activity_listar_clubes">Lista de Clubes</string>
</resources>
