<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.fiap.demolayout.CadastrarClubeActivity">

    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/label_nome"
        android:textSize="26dp" />

    <EditText
        android:id="@+id/etNomeClube"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNome"
        android:hint="@string/hint_clube_nome"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_below="@+id/etNomeClube">

        <TextView
            android:id="@+id/tvAno"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tvAno"
            />

        <EditText
            android:id="@+id/etAnoClube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:digits="0123456789"
            android:hint="@string/hint_digite_ano"
            android:inputType="number"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/tvMascote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_mascote"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/etMascote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mascote"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnSalvar" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnLimpar" />

    </LinearLayout>

</RelativeLayout>
