<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="false"
        android:layout_centerHorizontal="true"
        android:text="@string/label_login"
        android:layout_marginTop="@dimen/activity_vertical_margin"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLogin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/label_usuario"
        android:id="@+id/tvUsuario"
        />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvUsuario"
        android:layout_toRightOf="@+id/tvUsuario"
        android:hint="@string/hint_login"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUsuario"
        android:text="@string/label_senha"
        android:id="@+id/tvSenha"
        android:layout_marginTop="@dimen/timao"

        />

    <EditText
        android:id="@+id/etSenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/tvSenha"
        android:layout_toRightOf="@+id/tvSenha"
        android:hint="@string/hint_senha"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_below="@+id/etSenha"
        android:layout_centerInParent="true"
        android:text="@string/label_entrar"
        android:id="@+id/btLogar"
        android:onClick="logar"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/label_novocadastro"
        android:id="@+id/btNovo"/>


</RelativeLayout>
